--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.0.0",
     "express": "^4.16.4",
     "fahrenheit-to-celsius": "^1.0.0",
     "hbs": "^4.1.1",
